fixed overlap

--- a/src/style/sass/body/_home.scss
+++ b/src/style/sass/body/_home.scss
@@ -6,16 +6,8 @@
   justify-content: center;
   height: calc(100vh - 80px);
 
-  margin-bottom: 10vh;
-  @media (min-height: 1024px) {
-    margin-bottom: 1vh;
-  }
-
-  @media (min-height: 700px) {
-    // margin-top: 10vh;
-  }
   @media (min-width: $md) {
-    padding-top: 0;
+    padding-top: 20px;
   }
 
   .name-mobile {
@@ -39,6 +31,7 @@
     display: flex;
     justify-content: center;
     .face-picture {
+      margin-bottom: 20px;
       border-radius: 50%;
       width: 250px;
       height: 250px;
@@ -52,8 +45,8 @@
   .info-title {
     line-height: 1.4;
     font-size: 1.2rem;
+    margin-bottom: 20px;
     @media (min-width: $md) {
-      margin-top: 40px;
       line-height: 1.6;
       font-size: 2.4rem;
     }
@@ -64,7 +57,6 @@
     font-size: 1.2rem;
 
     @media (min-width: $md) {
-      margin-top: 40px;
       line-height: 1.6;
       font-size: 2rem;
       height: 30%;
@@ -80,7 +72,7 @@
       .info-text {
         height: 40px;
         @media (min-width: $md) {
-          height: 100px;
+          height: 80px;
         }
       }
     }
